products/stelaris/clusters/feather-core/stelaris-dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stelaris-dev
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/audit: restricted
